<resources>
    <string name="app_name">Warta Covid19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Beranda</string>
    <string name="covid_19">Covid-19</string>
    <string name="news">Berita</string>
    <string name="_0">0</string>
    <string name="kasus_positif">Kasus Positif</string>
    <string name="kasus_sembuh">Kasus Sembuh</string>
    <string name="kasus_meninggal">Kasus Meninggal</string>
    <string name="newest_update">Update Terkini</string>
    <string name="indonesia">INDONESIA</string>
    <string name="to_detail">Lihat Detail Penyebaran ></string>
    <string name="positive">Positif</string>
    <string name="recovered">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="latest_update">Update terakhir 8 Juni 2020</string>
    <string name="read_more"><![CDATA[Selengkapnya >]]></string>
    <string name="to_global_spread_detail">Lihat Data Global</string>
    <string name="data_global">Data Global</string>
    <string name="global">Global</string>
    <string name="back">Kembali</string>
    <string name="what_is_covid">Apa itu COVID-19?</string>
    <string name="symptom">Gejala</string>
    <string name="transmission">Penularan</string>
    <string name="prevention">Pencegahan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>