<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailIndonesiaFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:backgroundTint="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false">

            <ImageButton
                android:id="@+id/btn_backToHomeFragment"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="48dp"
                android:fontFamily="@font/lato_bold"
                android:text="Indonesia"
                android:textSize="24sp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/detail_head_spread_box"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/box"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/txt_head_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/positive"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_head_recover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="72dp"
                android:layout_toEndOf="@id/txt_head_positive"
                android:fontFamily="@font/lato_regular"
                android:text="@string/recovered"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_head_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txt_head_recover"
                android:fontFamily="@font/lato_regular"
                android:text="@string/death"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/num_head_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_head_positive"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/num_head_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_head_recover"
                android:layout_marginStart="110dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/num_head_positive"
                android:fontFamily="@font/lato_bold"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/num_head_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_head_death"
                android:layout_marginStart="120dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/num_head_recovered"
                android:fontFamily="@font/lato_bold"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/latest_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_head_spread_box"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="end"
            android:text="@string/latest_update"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/latest_update"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_rv_spread_detail" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_toGlobalSpreadDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@string/to_global_spread_detail"
        android:text="@string/data_global"
        android:textColor="@color/colorPrimary"
        app:hideMotionSpec="@android:anim/fade_out"
        app:icon="@drawable/ic_globe"
        app:iconTint="@color/colorPrimary"
        app:showMotionSpec="@android:anim/fade_in" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>