<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2"
        android:background="@drawable/box_title_home"
        android:backgroundTint="@color/colorPrimaryDark">

        <View
            android:id="@+id/img_virus1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/virus"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/img_virus2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/virus"
            app:layout_constraintBottom_toTopOf="@id/img_virus1"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/virus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_latest_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/newest_update"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/txt_country"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/txt_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/indonesia"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/go_to_detail"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/lato_semi_bold"
            android:text="@string/to_detail"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        android:backgroundTint="@android:color/white">

        <TextView
            android:id="@+id/txt_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/kasus_positif"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_person_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_person_add"
            android:tint="@color/colorOrange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_positive" />

        <TextView
            android:id="@+id/numPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorOrange"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_positive" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        android:backgroundTint="@android:color/white">

        <TextView
            android:id="@+id/txt_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/kasus_sembuh"
            android:textColor="@color/colorGreen"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_heartbeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_heartbeat"
            android:tint="@color/colorGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_recovered" />

        <TextView
            android:id="@+id/numRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorGreen"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_recovered" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        android:backgroundTint="@android:color/white">

        <TextView
            android:id="@+id/txt_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/kasus_meninggal"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_death"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/ic_person"
            android:tint="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_death" />

        <TextView
            android:id="@+id/numDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorRed"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_death" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>